<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_kit_client_token">7c3242e051ded124017a44fff9a991c6</string>
    <string name="account_type">chat.ola.vn.ACCOUNT</string>
    <string name="admob_native_large_size">LARGE_BANNER</string>
    <string name="admob_native_medium_size">LEADERBOARD</string>
    <string name="admob_native_small_size">FULL_BANNER</string>
    <string name="app_description">Ola Chat</string>
    <string name="app_name">Ola</string>
    <string name="app_release_date">14/05/2016</string>
    <string name="app_state_session">app_state_session</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="base64_rsa_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgObugYEx0Wi3DBKaddQ4W9S+ZCFpLf1swijFog/3AnMEMy9LFOCMMO7L1M6kWMBI5dHDauJK4YOf9+kcol+GbrTaI1b8QvyfRbOfaBuAHhWe7H7O6M9zfkDyiSLsC+rk99mp/g7tukN9/UWoIdPVm9JsbLCoVmrf8hCaBGYXySBnIv2t4/jb/0oz/iaodGYSXEaUntr3JW/DUbU1X4qug+lXPenP3gpydlSV/8ewvkgzAG9SDE378tBzdWhQqnHeMjdgxeqLp+Y30nMB68sOpPIm9g1s/apzRU/aohlKfleIGuieauFuOosyBu3LGwGy1l+0dIQgBLLFbeEh7ZkHgQIDAQAB</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buddy_content_uri">com.mg.ola.content.provider/buddy</string>
    <string name="button_chat_room">Chat room</string>
    <string name="button_group">Group</string>
    <string name="button_support">Support</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="com_accountkit_account_verified">Account verified!</string>
    <string name="com_accountkit_button_begin">Begin</string>
    <string name="com_accountkit_button_cancel">Cancel</string>
    <string name="com_accountkit_button_confirm">Confirm</string>
    <string name="com_accountkit_button_continue">Continue</string>
    <string name="com_accountkit_button_edit">EDIT</string>
    <string name="com_accountkit_button_log_in">Log In</string>
    <string name="com_accountkit_button_next">Next</string>
    <string name="com_accountkit_button_ok">OK</string>
    <string name="com_accountkit_button_resend_code_in">Send SMS Again in %1$d</string>
    <string name="com_accountkit_button_resend_sms">Send SMS Again</string>
    <string name="com_accountkit_button_send">Send</string>
    <string name="com_accountkit_button_send_code_in_call">Get a Call</string>
    <string name="com_accountkit_button_send_code_in_call_details">Get your code in a voice call</string>
    <string name="com_accountkit_button_send_code_in_call_from_facebook_details">Get your code in a voice call from Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb">Get a Code on Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb_details">Code will arrive as a Facebook notification</string>
    <string name="com_accountkit_button_start">Start</string>
    <string name="com_accountkit_button_start_over">Try Again</string>
    <string name="com_accountkit_button_submit">Submit</string>
    <string name="com_accountkit_check_email">Open your Email</string>
    <string name="com_accountkit_code_sent_to">Verify your mobile number %1$s</string>
    <string name="com_accountkit_confirmation_code_agreement">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a> and &lt;a href=%4$s>cookie use&lt;/a>."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> of %6$s."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> and &lt;a href=%6$s>Terms of Service&lt;/a> of %7$s."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> and &lt;a href=%6$s>Terms of Service&lt;/a> of %7$s. &lt;a href=%8$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> of %6$s. &lt;a href=%7$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_agreement_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a> and &lt;a href=%4$s>cookie use&lt;/a>. &lt;a href=%5$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_text">"I didn't get a code"</string>
    <string name="com_accountkit_confirmation_code_title">Enter your code</string>
    <string name="com_accountkit_email_invalid">This email is incorrect. Please try again.</string>
    <string name="com_accountkit_email_loading_title">Verifying your email address …</string>
    <string name="com_accountkit_email_login_retry_title">Confirm your email</string>
    <string name="com_accountkit_email_login_text">"Tap %1$s to get an email confirmation from Account Kit by Facebook to help you use %2$s. You don't need a Facebook account to use it. &lt;a href=%3$s>Learn how Facebook uses your info&lt;/a>."</string>
    <string name="com_accountkit_email_login_title">Enter your email address</string>
    <string name="com_accountkit_email_not_received">Resend Email</string>
    <string name="com_accountkit_email_verify_title">Open the email and confirm your email address</string>
    <string name="com_accountkit_enter_code_sent_to">Enter the code that was sent to %1$s</string>
    <string name="com_accountkit_error_title">A system issue occurred. Please try again.</string>
    <string name="com_accountkit_facebook_code_entry_title">Enter your code from Facebook</string>
    <string name="com_accountkit_logging_in">Logging in…</string>
    <string name="com_accountkit_other_ways_to_get_code">Other ways to get code:</string>
    <string name="filter_gender_female">Show female</string>
    <string name="filter_gender_flexible">Show flexible gender</string>
    <string name="filter_gender_male">Show male</string>
    <string name="filter_media_status">Show photo status message</string>
    <string name="filter_show_all">Show all</string>
    <string name="general_hint_bookmark_name">Bookmark title</string>
    <string name="general_hint_bookmark_url">Bookmark link</string>
    <string name="hint_enter_captcha_to_prove_not_robot">Look and enter exactly the number in image in order to prove that you are not the robot</string>
    <string name="hint_enter_exactly_the_number_above">Enter exactly the number above</string>
    <string name="hint_enter_nick_name_you_want_to_create">Enter nick name you want</string>
    <string name="hint_enter_set_your_password">Enter password to protect your account</string>
    <string name="message_invite_friend_to_chatgroup">Invite to chat group</string>
    <string name="string_account">Nick name</string>
    <string name="string_account_name_phonenumber_hint">Nick name</string>
    <string name="string_birthday">Birthday</string>
    <string name="string_buy_vip">Buy VIP</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_change">Change</string>
    <string name="string_continue">Continue</string>
    <string name="string_date">Date</string>
    <string name="string_edit_bookmark">Edit bookmark</string>
    <string name="string_enter_account_name_phonenumber">To reset your password, enter the nick name you use to log in to Ola. This is the nick-name that you used to contact to your friends on Ola.</string>
    <string name="string_enter_verification_code">Enter verification code</string>
    <string name="string_extend_vip">Extend VIP</string>
    <string name="string_female">Female</string>
    <string name="string_finish">Finish</string>
    <string name="string_first_and_last_name">First and last name</string>
    <string name="string_flexible">Flexible</string>
    <string name="string_having_trouble_login">Having trouble log in?</string>
    <string name="string_i_dont_know_my_password">"I don't know my password"</string>
    <string name="string_i_dont_know_my_username">"I don't know my nick name"</string>
    <string name="string_i_having_other_problems_login">"I'm having other problems log in"</string>
    <string name="string_male">Male</string>
    <string name="string_month">Month</string>
    <string name="string_next">Next</string>
    <string name="string_no">No</string>
    <string name="string_ok">OK</string>
    <string name="string_optional">Optional</string>
    <string name="string_password">Password</string>
    <string name="string_public">Public</string>
    <string name="string_sex">Gender</string>
    <string name="string_term_hint">By clicking Sign Up, you agree to our Terms and that you have read at http://term.ola.vn</string>
    <string name="string_using_vip_icon">Using VIP icon</string>
    <string name="string_verification_code">Verification code</string>
    <string name="string_vip_store">VIP icon collection</string>
    <string name="string_who_can_see">Who can see</string>
    <string name="string_year">Year</string>
</resources>