<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@color/white" android:padding="@dimen/metric.16dp" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_first_and_last_name" style="@style/defaultStyle.text.subhead" />
    <EditText android:gravity="left|center" android:id="@id/fullnameEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:hint="@string/string_optional" android:inputType="textCapWords" android:imeOptions="actionDone" style="@style/defaultStyle.edittext" />
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_sex" style="@style/defaultStyle.text.subhead" />
    <RadioGroup android:id="@id/genderRadioGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp">
        <RadioButton android:textColor="@color/colorTextBlackPrimary" android:id="@id/femaleRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_female" />
        <RadioButton android:textColor="@color/colorTextBlackPrimary" android:id="@id/maleRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_male" />
        <RadioButton android:textColor="@color/colorTextBlackPrimary" android:id="@id/flexibleRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_flexible" />
    </RadioGroup>
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_birthday" style="@style/defaultStyle.text.subhead" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp">
        <Button android:id="@id/dateButton" android:layout_width="0.0dp" android:layout_height="@dimen/metric.36dp" android:layout_marginRight="@dimen/metric.4dp" android:text="@string/string_date" android:layout_weight="1.0" style="@style/defaultStyle.button" />
        <Button android:id="@id/monthButton" android:layout_width="0.0dp" android:layout_height="@dimen/metric.36dp" android:layout_marginLeft="@dimen/metric.4dp" android:layout_marginRight="@dimen/metric.4dp" android:text="@string/string_month" android:layout_weight="1.0" style="@style/defaultStyle.button" />
        <Button android:id="@id/yearButton" android:layout_width="0.0dp" android:layout_height="@dimen/metric.36dp" android:layout_marginLeft="@dimen/metric.4dp" android:text="@string/string_year" android:layout_weight="1.0" style="@style/defaultStyle.button" />
    </LinearLayout>
    <Button android:id="@id/nextStepButton" android:layout_width="match_parent" android:layout_height="@dimen/metric.48dp" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_finish" style="@style/defaultStyle.button.green" />
</LinearLayout>
