<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@color/white" android:padding="@dimen/metric.16dp" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_verification_code" style="@style/defaultStyle.text.subhead" />
    <ImageView android:id="@id/verificationImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:scaleType="fitCenter" android:minWidth="@dimen/metric.164dp" android:minHeight="@dimen/metric.56dp" />
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_enter_verification_code" style="@style/defaultStyle.text.subhead" />
    <EditText android:gravity="left|center" android:id="@id/verificationEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:hint="@string/hint_enter_exactly_the_number_above" android:inputType="numberDecimal" android:imeOptions="actionDone" style="@style/defaultStyle.edittext" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:text="@string/hint_enter_captcha_to_prove_not_robot" style="@style/defaultStyle.text.caption" />
    <Button android:id="@id/nextStepButton" android:layout_width="match_parent" android:layout_height="@dimen/metric.48dp" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_finish" style="@style/defaultStyle.button.green" />
    <com.mg.ola.common.widget.OlaTextView android:gravity="center" android:id="@id/termAndConditionTextView" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_term_hint" style="@style/defaultStyle.text.caption" />
</LinearLayout>
