<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@color/white" android:padding="@dimen/metric.16dp" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_account" style="@style/defaultStyle.text.subhead" />
    <EditText android:id="@id/txtNickOla" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:hint="@string/hint_enter_nick_name_you_want_to_create" android:maxLines="1" android:imeOptions="actionNext" style="@style/defaultStyle.edittext.username" />
    <TextView android:textSize="@dimen/text.size.caption" android:textStyle="italic" android:textColor="@color/red" android:id="@id/txtAccountErrorInfo" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.4dp" android:text="@string/hint_enter_nick_name_you_want_to_create" />
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_password" style="@style/defaultStyle.text.subhead" />
    <EditText android:id="@id/txtPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:hint="@string/hint_enter_set_your_password" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/defaultStyle.edittext" />
    <Button android:id="@id/nextStepButton" android:layout_width="match_parent" android:layout_height="@dimen/metric.48dp" android:layout_marginTop="@dimen/metric.16dp" android:text="@string/string_next" style="@style/defaultStyle.button" />
</LinearLayout>
