<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:padding="@dimen/metric.4dp" android:layout_width="match_parent" android:layout_height="wrap_content" style="?dialog.header">
        <chat.ola.vn.view.OlaSquareHeightCachedImageView android:layout_width="@dimen/general.dialog.icon.thumb.size" android:layout_height="@dimen/general.dialog.icon.thumb.size" android:src="@drawable/ic_tab_news" android:scaleType="centerInside" android:adjustViewBounds="true" />
        <chat.ola.vn.view.AutoScrollTextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/metric.4dp" android:text="@string/string_edit_bookmark" style="?dialog.header.title.single" />
    </LinearLayout>
    <EditText android:id="@id/txtBookmarkTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp" android:hint="@string/general_hint_bookmark_name" android:maxLines="1" android:selectAllOnFocus="true" android:inputType="textCapWords|textNoSuggestions" android:imeOptions="actionDone" style="?common.editText" />
    <EditText android:id="@id/txtBookmarkUrl" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp" android:hint="@string/general_hint_bookmark_url" android:maxLines="1" android:selectAllOnFocus="true" android:inputType="textCapWords|textNoSuggestions" android:imeOptions="actionDone" style="?common.editText" />
    <LinearLayout android:id="@id/linearFooter" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp" android:layout_marginTop="25.0dp">
        <Button android:id="@id/btnButton1" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_marginRight="@dimen/metric.4dp" android:text="@string/string_change" android:layout_weight="1.0" style="@style/defaultStyle.button.green" />
        <Button android:id="@id/btnButton2" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_marginLeft="@dimen/metric.4dp" android:text="@string/string_cancel" android:layout_weight="1.0" style="?commont.button" />
    </LinearLayout>
</LinearLayout>
