<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/translucent_white_80_percent" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="@dimen/metric.16dp" android:paddingTop="@dimen/metric.16dp" android:paddingRight="@dimen/metric.16dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/string_using_vip_icon" style="@style/defaultStyle.text.caption" />
        <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.4dp" layout="@layout/vip_info_item_layout" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/policyViewLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/metric.48dp">
        <LinearLayout android:padding="@dimen/metric.16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/string_who_can_see" android:layout_weight="1.0" style="@style/defaultStyle.text.subhead" />
            <TextView android:layout_gravity="center" android:id="@id/policyTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/metric.8dp" android:layout_marginRight="@dimen/metric.8dp" android:text="@string/string_public" style="@style/defaultStyle.text.caption" />
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_arrow_right" />
        </LinearLayout>
        <View android:background="@color/colorTextBlackDivider" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginLeft="@dimen/metric.16dp" android:layout_marginRight="@dimen/metric.16dp" />
    </LinearLayout>
    <TextView android:id="@id/buyVipTextView" android:padding="@dimen/metric.16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/metric.48dp" android:text="@string/string_buy_vip" style="@style/defaultStyle.text.subhead" />
    <View android:background="@color/colorTextBlackDivider" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginLeft="@dimen/metric.16dp" android:layout_marginRight="@dimen/metric.16dp" />
    <TextView android:id="@id/extendVipTextView" android:padding="@dimen/metric.16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/metric.48dp" android:text="@string/string_extend_vip" style="@style/defaultStyle.text.subhead" />
    <TextView android:textColor="@color/colorTextWhitePrimary" android:ellipsize="end" android:gravity="center" android:id="@id/labelTextView" android:background="@color/app_background_color" android:layout_width="match_parent" android:layout_height="@dimen/metric.36dp" android:text="@string/string_vip_store" android:maxLines="1" style="@style/defaultStyle.text.subhead" />
</LinearLayout>
