<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorTextBlackPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.8dp" android:text="@string/message_invite_friend_to_chatgroup" style="@style/defaultStyle.text.body1" />
    <LinearLayout android:id="@id/responsButtonViewLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/metric.16dp">
        <Button android:id="@id/okButton" android:layout_width="@dimen/metric.96dp" android:layout_height="@dimen/metric.36dp" android:layout_marginRight="@dimen/metric.4dp" android:text="@string/string_ok" style="@style/defaultStyle.button.green" />
        <Button android:id="@id/noButton" android:layout_width="@dimen/metric.96dp" android:layout_height="@dimen/metric.36dp" android:layout_marginLeft="@dimen/metric.4dp" android:text="@string/string_no" style="@style/defaultStyle.button" />
    </LinearLayout>
</LinearLayout>
