<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/actionBarSpan" android:background="@drawable/bg_action_bar" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/metric.48dp">
        <ImageView android:id="@id/imgBack" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/metric.8dp" android:layout_marginTop="@dimen/metric.8dp" android:layout_marginRight="@dimen/metric.2dp" android:layout_marginBottom="@dimen/metric.8dp" android:src="@drawable/ic_action_back" android:scaleType="centerInside" android:adjustViewBounds="true" />
        <ImageView android:id="@id/imgIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/metric.8dp" android:layout_marginTop="@dimen/metric.8dp" android:layout_marginRight="@dimen/metric.8dp" android:layout_marginBottom="@dimen/metric.8dp" android:src="@drawable/app_icon" android:scaleType="centerInside" android:adjustViewBounds="true" />
        <TextView android:ellipsize="end" android:gravity="left|center" android:id="@id/txtActionTitle" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/app_name" android:maxLines="1" android:layout_weight="1.0" style="?actionBar.title" />
        <ImageView android:id="@id/btnClose" android:padding="@dimen/metric.8dp" android:layout_width="@dimen/metric.48dp" android:layout_height="@dimen/metric.36dp" android:src="@drawable/ic_close_quick_dialog" android:scaleType="centerInside" style="?commont.button.image" />
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:background="@drawable/bg_shadow_4_edges" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp">
                <TextView android:textSize="@dimen/text.size.body1" android:paddingLeft="@dimen/metric.4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp" android:text="@string/string_having_trouble_login" android:maxLines="5" style="?form.text.lable" />
                <RadioGroup android:id="@id/problemChooserRadioGroup" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <RadioButton android:id="@id/forgotPasswordRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_i_dont_know_my_password" />
                    <LinearLayout android:orientation="vertical" android:id="@id/usernameInputLayout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/general.list.item.height.small" android:layout_marginRight="@dimen/metric.8dp">
                        <TextView android:textSize="@dimen/text.size.caption" android:textColor="@color/colorTextBlackHintOrDisable" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/string_enter_account_name_phonenumber" />
                        <EditText android:gravity="left" android:id="@id/accountNameEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/string_account_name_phonenumber_hint" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="?common.editText" />
                    </LinearLayout>
                    <RadioButton android:id="@id/forgotUsernameRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_i_dont_know_my_username" />
                    <RadioButton android:id="@id/havingOtherProblemsRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_i_having_other_problems_login" />
                </RadioGroup>
                <Button android:id="@id/nextButton" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/metric.8dp" android:text="@string/string_continue" style="@style/defaultStyle.button.green" />
            </LinearLayout>
        </ScrollView>
        <ProgressBar android:layout_gravity="center" android:id="@id/progressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/defaultStyle.progresswatting" />
    </FrameLayout>
</LinearLayout>
